SERVER-46942 Cancel timer before leaving onAcquireConn

Avoid leaking state information if server closes too quickly on network_interface_tl.

(cherry picked from commit b43425cf31637d9f2dfd35eb7b09d372631e09fb)